--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                 <li>Implemented dynamic model selection and a feedback mechanism, enabling users to influence future recommendations.</li>
                 <li>Designed a user-friendly interface with HTML, CSS, and JavaScript, and built the backend using Python (Flask, Pandas, Scikit-Learn, Tensorflow, Spotipy).</li>
             </ul>
-            <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> Link</a>
+            <a href="https://github.com/bencoleman24/Music-Recommendation-Website" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
         </div>
 
         <div class="project">
@@ -69,7 +69,7 @@
                 <li>Developed an end-to-end pipeline for an epidemic engine. The system reads simulated health events in real-time and stores them, visualizes them in a live-updating dashboard, and makes ML anomaly predictions.</li>
                 <li>Tools and Technologies include Python, PySparkML, Kafka, Docker, PostgreSQL, Flask</li>
             </ul>
-            <a href="https://github.com/bencoleman24/Epidemic_Engine" class="project-link"><i class="fab fa-github"></i> Link</a>
+            <a href="https://github.com/bencoleman24/Epidemic_Engine" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
         </div>
             
         <div class="project">
@@ -79,7 +79,7 @@
                 <li>This application will have the framework of a social media platform with users, posts, and connections.</li>
                 <li>Tools and Technologies include Python, React, HTML, CSS, JavaScript, Google Maps API.</li>
             </ul>
-            <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link"><i class="fab fa-github"></i> Link</a>
+            <a href="https://github.com/novoaj/GreenSpaceExplorer" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
         </div>
 
         <div class="project">
@@ -89,7 +89,7 @@
                 <li>Employed Python with libraries like Hugging Face Transformers, TextBlob, and OpenAI API for accurate sentiment analysis and report generation.</li>
                 <li>Created detailed, user-friendly reports in PDF format, integrating visual data representations using Matplotlib, Seaborn, and ReportLab.</li>
             </ul>
-            <a href="https://github.com/bencoleman24/AmazonReviewInsights" class="project-link"><i class="fab fa-github"></i> Link</a>
+            <a href="https://github.com/bencoleman24/AmazonReviewInsights" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
         </div>
 
         <div class="project">
@@ -99,10 +99,65 @@
                 <li>Utilized Seasonal ARIMA forecasts, Multiple Linear Regression, Random Forests, and Lasso Regression for data analysis.</li>
                 <li>Project for Econometrics for Big Data course, presented findings to peers.</li>
             </ul>
-            <a href="https://github.com/bencoleman24/Climate-Change-Statistical-Analysis" class="project-link"><i class="fab fa-github"></i> Link</a>
+            <a href="https://github.com/bencoleman24/Climate-Change-Statistical-Analysis" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
         </div>
 
-        <!-- Additional projects omitted for brevity -->
+        <div class="project">
+            <h3><a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-title-link">An Overview of the Russia-Ukraine War and Its Global Economic Consequences</a></h3>
+            <ul>
+                <li>Wrote an article on the Russia-Ukraine conflict and its global economic consequences, published in the Spring 2023 issue of Equilibrium - UW-Madison Undergraduate Journal of Economics.</li>
+                <li>Researched and analyzed the economic impacts of the conflict, with a focus on global financial systems, trade, and economic stability.</li>
+            </ul>
+            <a href="https://issuu.com/uwequilibrium.com/docs/eq_volume_13_spread_" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
+        </div>
+
+        <div class="project">
+            <h3><a href="https://www.wgbh.org/news/local/2024-12-16/a-state-agency-that-issues-student-loans-has-sued-thousands-of-borrowers" class="project-title-link">GBH Investigations: Debt Collection Court (Researcher)</a></h3>
+            <ul>
+                <li>Fall 2024 semester long project through BU Spark! working on data analytics and research for GBH article on MA student loan debt collection practices. </li>
+                <li>Project included client presentations, analytics, research, programming, visualization, and database navigation. </li>
+            </ul>
+            <a href="https://www.wgbh.org/news/local/2024-12-16/a-state-agency-that-issues-student-loans-has-sued-thousands-of-borrowers" class="project-link"><i class="fas fa-book"></i> Read the Article</a>
+        </div>
+
+        <div class="project">
+            <h3><a href="nba_allstar_projections.html" class="project-title-link">2023 NBA All-Star Projections</a></h3>
+            <ul>
+                <li>Conducted a detailed analysis using historical NBA data to predict the 24 players to be selected for the 2023 NBA All-Star team.</li>
+                <li>Utilized Python for statistical modeling, including regression, classification, hyperparameter tuning, and model evaluation, to analyze player performance and team success metrics.</li>
+                <li>Achieved a model prediction accuracy of 70.8% for the 2023 All-Star selections and identified areas for improvement.</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/2023-NBA-All-Star-Projections" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+        </div>
+
+        <div class="project">
+            <h3><a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-title-link">Introduction to Big Data Systems Projects</a></h3>
+            <ul>
+                <li>Collection of projects from the Introduction to Big Data Systems course at UW-Madison.</li>
+                <li>Worked with various big data technologies, including Docker, Hadoop, Spark, and Cassandra, all set up on a Google Cloud VM using Ubuntu 22.04 LTS.</li>
+                <li>Gained practical experience in managing distributed systems and processing large-scale data.</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/Intro-to-Big-Data-Systems" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+        </div>
+
+        <div class="project">
+            <h3><a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-title-link">Introduction to Artificial Intelligence Projects</a></h3>
+            <ul>
+                <li>Collection of projects from the Introduction to Artificial Intelligence course at UW-Madison (Spring 2024).</li>
+                <li>Covered foundational AI topics, including reinforcement learning, clustering, and neural networks.</li>
+                <li>Worked on implementing AI algorithms and exploring their real-world applications.</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/Intro-to-AI-Projects" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+        </div>
+
+        <div class="project">
+            <h3><a href="about.html" class="project-title-link">My Portfolio (this website)</a></h3>
+            <ul>
+                <li>Created website to display my projects and experience.</li>
+                <li>Assumed the role of project manager and built it utilizing advanced prompt engineering (ChatGPT) 💡.</li>
+            </ul>
+            <a href="https://github.com/bencoleman24/bencoleman24.github.io/tree/master" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+        </div>
 
     </section>
     <footer>
