--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><a href="https://www.rlcitysim.com">Projects - Benjamin Coleman</a></title>
+    <title>Projects - Benjamin Coleman</a></title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EDMCKK2SN0"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
