--- a/projects.html
+++ b/projects.html
@@ -48,9 +48,10 @@
                 <li>This project is accessible to anyone - website includes a React frontend and a Flask backend which trains and runs the simulation in real-time.</li>
             </ul>
             <div class="project-links">
-                <a href="https://www.rlcitysim.com" class="project-link">Visit the Website</a>
                 <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+                <a href="https://www.rlcitysim.com" class="project-link">Visit the Website</a>
             </div>
+        </div>
         </div>
 
         <div class="project">
