--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <h3><a href="https://www.rlcitysim.com" class="project-title-link">Reinforcement Learning City Simulator</a></h3>
             <ul>
                 <li>Developed an interactive market economy city simulation where a reinforcement-learning government agent sets taxes, invests in infrastructure, and funds subsidies.</li>
-                <li>Households, raw material firms, manufacturers, and retailers interact to form a dynamic economy.</li>
+                <li>Households, raw material firms, manufacturing firms, and retail firms interact to form a dynamic economy.</li>
                 <li>This city is customizable - users can customize city parameters (like tax policy or cost of living) and government RL agents.</li>
                 <li>This project is accessible to anyone - website includes a React frontend and a Flask backend which trains and runs the simulation in real-time.</li>
             </ul>
