--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,19 @@
     </script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+      .project-links {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .project-link {
+        margin-left: 15px;
+      }
+      .project-links a:first-child {
+        margin-right: 30px; /* Increased space between GitHub and website links */
+      }
+    </style>
 </head>
 
 <body>
@@ -51,7 +64,6 @@
                 <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
                 <a href="https://www.rlcitysim.com" class="project-link">Visit the Website</a>
             </div>
-        </div>
         </div>
 
         <div class="project">
