--- a/projects.html
+++ b/projects.html
@@ -17,14 +17,8 @@
     <style>
       .project-links {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      .project-link {
-        margin-left: 15px;
-      }
-      .project-links a:first-child {
-        margin-right: 30px; /* Increased space between GitHub and website links */
+        justify-content: flex-start; /* Aligns them on the left */
+        gap: 20px; /* Adds space between the links */
       }
     </style>
 </head>
