--- a/projects.html
+++ b/projects.html
@@ -45,9 +45,13 @@
 
     <section id="projects">
         <h2 class="section-title">Projects</h2>
-        
         <div class="project">
-            <h3><a href="https://www.rlcitysim.com" class="project-title-link">Reinforcement Learning City Simulator</a></h3>
+            <h3>
+                <a href="https://www.rlcitysim.com" class="project-title-link">
+                    <i class="fas fa-star" style="color: gold; margin-right: 8px;" title="Top Project"></i>
+                    Reinforcement Learning City Simulator
+                </a>
+            </h3>
             <ul>
                 <li>Developed an interactive market economy city simulation where a reinforcement-learning government agent sets taxes, invests in infrastructure, and funds subsidies.</li>
                 <li>Households, raw material firms, manufacturing firms, and retail firms interact to form a dynamic economy.</li>
@@ -55,7 +59,9 @@
                 <li>This project is accessible to anyone - website includes a React frontend and a Flask backend which trains and runs the simulation in real-time.</li>
             </ul>
             <div class="project-links">
-                <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link"><i class="fab fa-github"></i> GitHub Link</a>
+                <a href="https://github.com/bencoleman24/Reinforcement-Learning-City-Simulation" class="project-link">
+                    <i class="fab fa-github"></i> GitHub Link
+                </a>
                 <a href="https://www.rlcitysim.com" class="project-link">Visit the Website</a>
             </div>
         </div>
