--- a/music_recommendation.html
+++ b/music_recommendation.html
@@ -29,7 +29,7 @@
 
         <section id="overview">
             <h2 class="section-title">Project Overview</h2>
-            <p>This project is a web-based application that serves personalized song recommendations to users. Users can select the recommendation model type (e.g., popularity-based, cosine similarity, k-means, neural networks) and input their genre preferences or a song that they want recommendations based on. The system then generates tailored suggestions with corresponding song links, providing a smooth and interactive experience.</p>
+            <p>This project is a web-based application that serves personalized song recommendations to users. Users can select the recommendation model type (e.g., popularity-based, cosine similarity, k-means, neural networks) and input their genre preferences or a song that they want recommendations based on. The system then generates tailored suggestions with corresponding song links, providing a smooth and interactive experience. This website is no longer publicly available due to recent changes with Spotify API :(  check out the demo video at the bottom to see how it used to work.</p>
         </section>
 
         <section id="features">
