--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
     <section id="about">
         <h2 class="section-title">About Me</h2>
-            <p>Hello! I have a passion and curiosity for using data to solve real-world problems and uncovering hidden insights. I’m currently a Data Science masters student at Boston University and a research assistant in the Math & Stats department. I spend most of my time learning, researching, exercising, and playing abstract strategy games. I’m actively seeking out roles in Data Science, Analytics, Data Engineering, and related roles.</p>
+            <p>Hello! I’m passionate about using data to solve real-world problems and drive meaningful solutions. I’m currently a Data Science master’s student at Boston University, working as a research assistant in the Math & Stats department and a teaching assistant in the DS department. When I’m not working with data, I enjoy learning, researching, exercising, and playing abstract strategy games. I’m actively seeking roles in Data Science, Analytics, Data Engineering, and related fields.</p>
             <h2 class="section-title">Education</h2>
         <div class="education">
             <p><strong>Boston University</strong> - M.S. in Data Science (Expected Graduation May 2025 or December 2025)</p>
