--- a/about.html
+++ b/about.html
@@ -52,16 +52,16 @@
         
         <h2 class="section-title">Recent Experience</h2>
         <div class="experience">
+            <h3>Data Management Professional - Bloomberg</h3>
+            <p><strong>June 2025 - Present</strong><br>Supporting the integrity, accessibility, and usability of Bloomberg's proprietary datasets by ensuring high-quality data pipelines and collaborating across engineering, product, and data teams to resolve data issues efficiently and scalably.</p>
+        </div>
+        <div class="experience">
             <h3>Graduate Teaching Assistant - Boston University</h3>
-            <p><strong>January 2025 - Present</strong><br>Responsible for leading weekly discussion sections to support student understanding and encourage active engagement with course material. Assisting with grading assignments and maintained open communication with students and the professor to address questions and provide feedback effectively.</p>
+            <p><strong>January 2025 - May 2025</strong><br>Responsible for leading weekly discussion sections to support student understanding and encourage active engagement with course material. Assisting with grading assignments and maintained open communication with students and the professor to address questions and provide feedback effectively.</p>
         </div>
         <div class="experience">
             <h3>Graduate Research Assistant - Boston University</h3>
             <p><strong>August 2024 - Present</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification.</p>
-        </div>
-        <div class="experience">
-            <h3>Data Science Intern - SuperWorld</h3>
-            <p><strong>June 2024 - September 2024</strong><br>Worked on various data analysis projects to identify key trends and potential strategies in improving platform engagement and growth. Enhanced data workflow by improving data cleanliness and optimizing transformation processes to support scalable models and analytics.</p>
         </div>
         <div class="experience">
             <h3>Data Engineering Intern - CNH Industrial</h3>
