--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
             <p>Hello! I’m passionate about using data to solve real-world problems and drive meaningful solutions. I’m currently a Data Science master’s student at Boston University, working as a research assistant in the Math & Stats department and a teaching assistant in the DS department. When I’m not working with data, I enjoy learning, researching, exercising, and playing abstract strategy games. I’m actively seeking roles in Data Science, Analytics, Data Engineering, and related fields.</p>
             <h2 class="section-title">Education</h2>
         <div class="education">
-            <p><strong>Boston University</strong> - M.S. in Data Science (Expected Graduation May 2025 or December 2025)</p>
-            <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics (Graduated Spring 2024)</p>
+            <p><strong>Boston University</strong> - M.S. in Data Science</p>
+            <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics</p>
         </div>
         
         <h2 class="section-title">Recent Experience</h2>
