--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <h2 class="section-title">Recent Experience</h2>
         <div class="experience">
             <h3>Data Management Professional - Bloomberg</h3>
-            <p><strong>June 2025 - Present</strong><br>Supporting the integrity, accessibility, and usability of Bloomberg's proprietary datasets by ensuring high-quality data pipelines and collaborating across engineering, product, and data teams to resolve data issues efficiently and scalably.</p>
+            <p><strong>June 2025 - Present</strong><br></p>
         </div>
         <div class="experience">
             <h3>Graduate Teaching Assistant - Boston University</h3>
