--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Data Management Professional at Bloomberg</p>
-            <p class="location" style="font-size: 0.9em; color: #555;">New Jersey | Chicago</p>
+            <p>Data at Bloomberg</p>
+            <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Princeton</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
                 <a href="https://www.linkedin.com/in/benjamin-coleman02"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -43,7 +43,7 @@
 
     <section id="about">
         <h2 class="section-title">About Me</h2>
-        <p>I’m currently working at Bloomberg as a Data Management Professional, where I contribute to data quality, governance, and operational integrity across large financial datasets. I enjoy tackling complex problems with data-driven approaches and building tools that make insights more accessible. Outside of work, I’m into basketball, strategy games, hiking, and exploring new ideas in AI and economics.</p>
+        <p>Hello! I’m currently working at Bloomberg as a Data Management Professional. Recently I finished up my master’s degree in Data Science at Boston University and prior to that my bachelor’s at UW–Madison. Interested in all things data! I also love basketball, the outdoors, and abstract strategy games.</p>
 
         <h2 class="section-title">Education</h2>
         <div class="education">
