--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Data at Bloomberg</p>
+            <p>Data Management Professional at Bloomberg</p>
             <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Princeton</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
