--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <header class="detailed-header">
         <div class="header-content">
             <h1>Benjamin Coleman</h1>
-            <p>Data Management Professional at Bloomberg</p>
+            <p>Data Management Professional @ Bloomberg</p>
             <p class="location" style="font-size: 0.9em; color: #555;">Chicago | Princeton</p>
             <div class="contact-links">
                 <a href="mailto:benbcoleman08@gmail.com"><i class="fas fa-envelope"></i> Email</a>
@@ -43,38 +43,34 @@
 
     <section id="about">
         <h2 class="section-title">About Me</h2>
-        <p>Hello! I’m currently working at Bloomberg as a Data Management Professional. Recently I finished up my master’s degree in Data Science at Boston University and prior to that my bachelor’s at UW–Madison. Interested in all things data! I also love basketball, the outdoors, and abstract strategy games.</p>
+        <p>Hello! I’m currently working at Bloomberg as a Data Management Professional. Recently I finished up my masters degree in Data Science at Boston University and prior to that my bachelors at UW-Madison. Interested in all things data! I also love basketball, the outdoors, and abstract strategy games.</p>
 
         <h2 class="section-title">Education</h2>
         <div class="education">
-            <p><strong>Boston University</strong> – M.S. in Data Science (2025)</p>
-            <p><strong>University of Wisconsin–Madison</strong> – B.S. in Data Science and Economics (2024)</p>
+            <p><strong>Boston University</strong> - M.S. in Data Science</p>
+            <p><strong>University of Wisconsin–Madison</strong> - B.S. in Data Science and Economics</p>
         </div>
-
+        
         <h2 class="section-title">Recent Experience</h2>
         <div class="experience">
-            <h3>Data Management Professional – Bloomberg</h3>
-            <p><strong>June 2025 – Present</strong><br></p>
+            <h3>Graduate Teaching Assistant - Boston University</h3>
+            <p><strong>January 2025 - May 2025</strong><br>Responsible for leading weekly discussion sections to support student understanding and encourage active engagement with course material. Assisting with grading assignments and maintained open communication with students and the professor to address questions and provide feedback effectively.</p>
         </div>
         <div class="experience">
-            <h3>Graduate Research Assistant – Boston University</h3>
-            <p><strong>August 2024 – May 2025</strong><br>Contributed to research on stochastic gradient algorithms, focusing on optimization strategies and uncertainty quantification using real-world datasets.</p>
+            <h3>Graduate Research Assistant - Boston University</h3>
+            <p><strong>August 2024 - May 2025</strong><br>Contributing to the development and analysis of stochastic gradient algorithms focusing on optimizing learning rates and uncertainty quantification.</p>
         </div>
         <div class="experience">
-            <h3>Graduate Teaching Assistant – Boston University</h3>
-            <p><strong>January 2025 – May 2025</strong><br>Led weekly discussion sections, assisted with grading, and supported student learning in data science courses through effective communication and feedback.</p>
+            <h3>Data Management Professional - Bloomberg</h3>
+            <p><strong>June 2025 - Present</strong><br>Working on enterprise data quality, transformation, and integrity initiatives. Supporting internal teams with consistent, reliable data used across Bloomberg’s platforms and client services.</p>
         </div>
         <div class="experience">
-            <h3>Data Science Intern – SuperWorld</h3>
-            <p><strong>June 2024 – September 2024</strong><br>Analyzed platform engagement data, streamlined transformation processes, and improved the reliability of data pipelines to support product decisions.</p>
+            <h3>Data Engineering Intern - CNH Industrial</h3>
+            <p><strong>May 2023 - August 2023</strong><br>Designed and implemented a data quality monitoring system using scheduled Databricks notebooks, enhancing data quality and accuracy. Employed statistical techniques to examine extensive vehicle data, successfully identifying and diagnosing problems, contributing to improved insights. Leveraged PowerBI for visualization and presented findings effectively.</p>
         </div>
         <div class="experience">
-            <h3>Data Engineering Intern – CNH Industrial</h3>
-            <p><strong>May 2023 – August 2023</strong><br>Developed a data quality monitoring framework using Databricks and statistical analysis to ensure reliable processing of vehicle telemetry data.</p>
-        </div>
-        <div class="experience">
-            <h3>Student Assistant – University of Wisconsin–Madison, Dean of Students Office</h3>
-            <p><strong>January 2022 – May 2024</strong><br>Provided front-line support and resources to students and families, while assisting staff with communications and operational tasks.</p>
+            <h3>Student Assistant - University of Wisconsin-Madison, Dean of Students Office</h3>
+            <p><strong>January 2022 - May 2024</strong><br>Served as the first line of communication for the office, helping students, parents, and staff of the university. Assisted professional staff with projects and scheduling, and provided resources to students and parents in times of crisis.</p>
         </div>
 
         <h2 class="section-title">Skills</h2>
