--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         <h2 class="section-title">Recent Experience</h2>
         <div class="experience">
             <h3>Data Management Professional - Bloomberg</h3>
-            <p><strong>June 2025 - Present</strong><br>Working on enterprise data quality, transformation, and integrity initiatives. Supporting internal teams with consistent, reliable data used across Bloomberg’s platforms and client services.</p>
+            <p><strong>June 2025 - Present</strong><br>..........</p>
         </div>
         <div class="experience">
             <h3>Graduate Teaching Assistant - Boston University</h3>
